# Swedwise.ChatWithKafka

./: .gitignore  LICENSE  README.md  setup.cfg
chatwithkafka/: app.py  app.tcss  cli.py  key.py
