[metadata]
name = chatwithkafka
version = 0.1.0
author =Henrik Blidh
author_email = henrik.blidh@swedwise.se
url = https://github.com/swedwise/Swedwise.ChatWithKafka
description = A Kafka Chat application as a TUI
long_description = file: README.md
long_description_content_type = text/markdown
keywords = kafka, chat, tui
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    confluent-kafka
    textual
    tzlocal
    cryptography

[options.entry_points]
console_scripts =
    chatwithkafka = chatwithkafka.cli:cli
    chatwithkafka-keygen = chatwithkafka.key:key_cli

[options.packages.find]
exclude =
    examples*
    Filter*
    scripts*
    test*
    docs*